@@ -9,6 +9,12 @@ the output driver. It is recommended to drain queues with the previous
 version before switching to this one.
 ********************************* WARNING *********************************
 
+- reordered imudp processing. Message parsing is now done as part of main
+  message queue worker processing (was part of the input thread)
+  This should also improve performance, as potentially more work is
+  done in parallel.
+- bugfix: compressed syslog messages could be slightly mis-uncompressed
+  if the last byte of the compressed record was a NUL
 - added $UDPServerTimeRequery option which enables to work with
   less acurate timestamps in favor of performance. This enables querying
   of the time only every n-th time if imudp is running in the tight
